--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
    	<ul class="intro-social">
          <li><a href="https://www.facebook.com/mundrawala18" target="_blank"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://twitter.com/mundrawala18" target="_blank"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/murtaza-m-624091128" target="_blank"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://www.instagram.com/m.mundrawala/" target="_blank"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->
 
