--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>MURTAZA MUNDRAWALA</title>
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'> 
 	<meta name="description" content="">
 	<meta name="author" content="">
 
