--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body id="top" oncopy="return false" oncut="return false" onpaste="return false">
+<body id="top" oncopy="return false" oncut="return false" onpaste="return false" onmousedown = 'return false' onselectstart = 'return false'>
 
 	<!-- header
    ================================================== -->
