--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>MURTAZA MUNDRAWALA</title>
-        <meta http-equiv='cache-control' content='no-cache'> 
-        <meta http-equiv='expires' content='0'> 
-        <meta http-equiv='pragma' content='no-cache'> 
+        <meta http-equiv='cache-control' content='no-cache'>
+        <meta http-equiv='expires' content='0'>
+        <meta http-equiv='pragma' content='no-cache'>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -268,7 +268,6 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Internship</h3>
-	   					<!-- <p>15/07/2019 to 07/11/2019</p> -->
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -362,7 +361,7 @@
 
             <div class="timeline-content">
               <h4>Department Of Computer Science, Kachchh University</h4>
-              <p>Pursuing</p>
+              <p>June 2019 - Pursuing</p>
               <p>&nbsp</p>
             </div>
             </div> <!-- /timeline-block -->
@@ -378,7 +377,7 @@
 
             <div class="timeline-content">
               <h4>Department Of Computer Science, Kachchh University</h4>
-              <p>March 2019</p>
+              <p>June 2016 - March 2019</p>
               <p>82.36%</p>
             </div>
 
