--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
    ================================================== -->
    <header>
    	<div class="row">
-
    		<div class="top-bar">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
@@ -59,6 +58,7 @@
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
+            <li><a href="https://github.com/mundrawala18" target="_blank" title="">GitHub</a></li>
 					</ul>
 				</nav>
    		</div> <!-- /top-bar -->
