--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
           <hr>
    				<li>
    					<strong>Email:</strong><br>
-            <a href="mailto:mundrawala18@gmail.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a>mudrawala18@gmail.com<br>
-            <a href="mailto:hello@mundrawala.ml"> <i class="fa fa-envelope" aria-hidden="true"></i></a>hello@mundrawala.ml
+            <a href="mailto:mundrawala18@gmail.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a> &nbsp&nbspmudrawala18@gmail.com<br>
+            <a href="mailto:hello@mundrawala.ml"> <i class="fa fa-envelope" aria-hidden="true"></i></a>&nbsp&nbsp hello@mundrawala.ml
    				</li>
           <hr>
           <li>
    					<strong>Mobile:</strong><br>
-   					<a href="tel:+917490972908"><i class="fa fa-phone" aria-hidden="true"></i></a> +917490972908<br>
-            <a href="tel:+919737728472"><i class="fa fa-phone" aria-hidden="true"></i></a> +919737728472
+   					<a href="tel:+917490972908"><i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp +917490972908<br>
+            <a href="tel:+919737728472"><i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp +919737728472
 
    				</li>
           <hr>
