--- a/cfc/index.html
+++ b/cfc/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Court Fee Calc</title>
     <link rel="stylesheet" href="style.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   </head>
   <body>
     <div class="heading">
