--- a/cfc/index.html
+++ b/cfc/index.html
@@ -21,10 +21,10 @@
           <h3>Securitisation Application (SA)</h3>
           <input class="input" type="number" name="amt_sa" placeholder="Amount "><br>
           <span><input type="radio" id="brw" name="sa_type">
-          <label style="color:#1bbce0;">Borrower</label></span>
+          <label style="color:#21ba9e;">Borrower</label></span>
           <span style="margin-left:5%; margin-right:5%;"></span>
           <span><input type="radio" id="tp" name="sa_type">
-          <label style="color:#1bbce0;">Third party</label></span><br>
+          <label style="color:#21ba9e;">Third party</label></span><br>
           <button type="button" style="margin:10%;" class="button" name="button">Calculate</button><br>
           <div class="fee">
               Fee:-  ₹0.0/-
