--- a/cfc/index.html
+++ b/cfc/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Court Fee Calc</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -19,6 +20,7 @@
     <div style="display: flex; justify-content:space-around; ">
         <div class="box" v-if="sa" id="sa">
           <h3>Securitisation Application (SA)</h3>
+          <h2 style="text-align:right; margin-right:5%; margin-top:-4%; color:red;" @click="sa=false;">✖</h2>
           <input class="input" type="number" name="amt_sa" placeholder="Amount "><br>
           <span><input type="radio" id="brw" name="sa_type">
           <label style="color:#21ba9e;">Borrower</label></span>
@@ -33,6 +35,7 @@
 
         <div class="box" v-if="oa" id="oa">
           <h3>Original Application (OA)</h3>
+            <h2 style="text-align:right; margin-right:5%; margin-top:-4%; color:red;" @click="oa=false;">✖</h2>
           <input class="input" type="number" name="amt_oa" placeholder="Amount "><br>
           <span></span><br>
           <button type="button" style="margin:10%;" class="button" name="button">Calculate</button><br>
