--- a/cfc/index.html
+++ b/cfc/index.html
@@ -20,7 +20,8 @@
     <div style="display: flex; justify-content:space-around; ">
         <div class="box" v-if="sa" id="sa">
           <h3>Securitisation Application (SA)</h3>
-          <input class="input" v-model="sAmt" type="number" name="amt_sa" placeholder="Amount "><br>
+          <input class="input" v-model="sAmt" type="number" name="amt_sa" placeholder="Amount " required><br>
+          <i style="color:red; white-space:pre-wrap;">{{sErr}}</i><br>
           <span><input type="radio" id="brw" v-model="saType" value="Borrower" name="sa_type">
           <label style="color:#21ba9e;">Borrower</label></span>
           <span style="margin-left:5%; margin-right:5%;"></span>
@@ -34,7 +35,8 @@
 
         <div class="box" v-if="oa" id="oa">
           <h3>Original Application (OA)</h3>
-          <input class="input" v-model="oAmt" type="number" name="amt_oa" placeholder="Amount "><br>
+          <input class="input" v-model="oAmt" type="number" name="amt_oa" placeholder="Amount " required><br>
+          <i style="color:red;">{{oErr}}</i>
           <span></span><br>
           <button type="button" @click="oCalc" style="margin:10%;" class="button" name="button">Calculate</button><br>
           <div class="fee">
@@ -54,59 +56,87 @@
           sFee:'Fee:-',
           oFee:'Fee:-',
           saType:'',
+          sErr:'',
+          oErr:''
         },
         methods: {
       oCalc: function () {
-        if(this.oAmt >= 1000000)
-        { this.oFee=0;
-          if(this.oAmt == 1000000)
+        this.oFee='Fee:-';
+        this.oErr='';
+        if(this.oAmt!=='')
+        {
+          if(this.oAmt >= 1000000)
           {
-              this.oFee=12000;
+            if(this.oAmt == 1000000)
+            {
+                this.oFee=12000;
+            }
+            else if(this.oAmt > 1000000)
+            {
+              this.oFee = Math.round(12000+(((this.oAmt-1000000)/100000)*1000));
+            }
+            if(this.oFee>=150000)
+            {
+              this.oFee=150000;
+            }
+            this.oFee="Fee:- ₹"+this.oFee+"/--"
           }
-          else if(this.oAmt > 1000000)
-          {
-            this.oFee = Math.round(12000+(((this.oAmt-1000000)/100000)*1000));
+          else{
+            this.oErr="⚠️ The amount can not be below 1000000 (10 Lakh)";
           }
-          if(this.oFee>=150000)
-          {
-            this.oFee=150000;
-          }
-          this.oFee="Fee:- ₹"+this.oFee+"/--"
-        }
-        else{
-          this.oFee="  Invalid Amount ";
-        }
+      }
+      else
+      {
+        this.oErr="⚠️ The amount field can not be empty..";
+      }
 
       },
     sCalc: function () {
-        this.sFee='';
-        if(this.saType==="Third party")
+        this.sFee='Fee:-';
+        this.sErr='';
+        if(this.sAmt!=='')
         {
-            this.sFee = Math.round((this.sAmt/100000)*125);
-            if(this.sFee >= 50000){
-              this.sFee=50000;
+          if(this.sAmt>=100000)
+          {
+            if(this.saType==="Third party")
+            {
+                this.sFee = Math.round((this.sAmt/100000)*125);
+                if(this.sFee >= 50000){
+                  this.sFee=50000;
+                }
+              this.sFee="Fee:- ₹"+this.sFee+"/--"
             }
-          this.sFee="Fee:- ₹"+this.sFee+"/--"
-        }
-        else if (this.saType==="Borrower")
-        {
-          if(this.sAmt>=100000 && this.sAmt<=1000000)
-          {
-            this.sFee=Math.round((this.sAmt/100000)*500);
+            else if (this.saType==="Borrower")
+            {
+              if(this.sAmt>=100000 && this.sAmt<=1000000)
+              {
+                this.sFee=Math.round((this.sAmt/100000)*500);
+              }
+              else if (this.sAmt>1000000)
+              {
+                this.sFee = Math.round(5000+((this.sAmt-1000000)/100000)*250);
+              }
+              if(this.sFee >= 100000)
+              {
+                this.sFee=100000;
+              }
+              this.sFee="Fee:- ₹"+this.sFee+"/--"
+            }
           }
-          else if (this.sAmt>1000000)
+          else
           {
-            this.sFee = Math.round(5000+((this.sAmt-1000000)/100000)*250);
+            this.sErr="⚠️ The amount can not be below 100000 (1 Lakh) \n";
           }
-          if(this.sFee >= 100000)
+
+          if(this.saType=='')
           {
-            this.sFee=100000;
+            alert("ye")
+            this.sErr=this.sErr+"⚠️ Please select whether your borrower or third party";
           }
-          this.sFee="Fee:- ₹"+this.sFee+"/--"
         }
         else
         {
-          this.sFee="Invalid Input"
+          this.sErr="⚠️ The amount field can not be empty..";
         }
       }
     }
