--- a/cfc/index.html
+++ b/cfc/index.html
@@ -45,101 +45,6 @@
         </div>
     </div>
     </div>
-    <script>
-      new Vue({
-        el: "#cfc",
-        data: {
-          sa:false,
-          oa:false,
-          sAmt:'',
-          oAmt:'',
-          sFee:'Fee:-',
-          oFee:'Fee:-',
-          saType:'',
-          sErr:'',
-          oErr:''
-        },
-        methods: {
-      oCalc: function () {
-        this.oFee='Fee:-';
-        this.oErr='';
-        if(this.oAmt!=='')
-        {
-          if(this.oAmt >= 1000000)
-          {
-            if(this.oAmt == 1000000)
-            {
-                this.oFee=12000;
-            }
-            else if(this.oAmt > 1000000)
-            {
-              this.oFee = Math.round(12000+(((this.oAmt-1000000)/100000)*1000));
-            }
-            if(this.oFee>=150000)
-            {
-              this.oFee=150000;
-            }
-            this.oFee="Fee:- ₹"+this.oFee+"/--"
-          }
-          else{
-            this.oErr="⚠️ The amount can not be below 1000000 (10 Lakh)";
-          }
-      }
-      else
-      {
-        this.oErr="⚠️ The amount field can not be empty..";
-      }
-
-      },
-    sCalc: function () {
-        this.sFee='Fee:-';
-        this.sErr='';
-        if(this.sAmt!=='')
-        {
-          if(this.sAmt>=100000)
-          {
-            if(this.saType==="Third party")
-            {
-                this.sFee = Math.round((this.sAmt/100000)*125);
-                if(this.sFee >= 50000){
-                  this.sFee=50000;
-                }
-              this.sFee="Fee:- ₹"+this.sFee+"/--"
-            }
-            else if (this.saType==="Borrower")
-            {
-              if(this.sAmt>=100000 && this.sAmt<=1000000)
-              {
-                this.sFee=Math.round((this.sAmt/100000)*500);
-              }
-              else if (this.sAmt>1000000)
-              {
-                this.sFee = Math.round(5000+((this.sAmt-1000000)/100000)*250);
-              }
-              if(this.sFee >= 100000)
-              {
-                this.sFee=100000;
-              }
-              this.sFee="Fee:- ₹"+this.sFee+"/--"
-            }
-          }
-          else
-          {
-            this.sErr="⚠️ The amount can not be below 100000 (1 Lakh) \n";
-          }
-
-          if(this.saType=='')
-          {
-            this.sErr=this.sErr+"⚠️ Please select whether your borrower or third party";
-          }
-        }
-        else
-        {
-          this.sErr="⚠️ The amount field can not be empty..";
-        }
-      }
-    }
-      })
-    </script>
+    <script type="text/javascript" src="calc.js"></script>
   </body>
 </html>
