--- a/share.html
+++ b/share.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id='shr' class="" v-if="webShareApiSupported">
-      <button @click='' type="button" name="button">{{txt}}</button>
+      <button @click='shareViaWebShare' type="button" name="button">{{txt}}</button>
     </div>
     <script type="text/javascript">
       new Vue({
