--- a/share.html
+++ b/share.html
@@ -22,6 +22,7 @@
         },
         methods:{
           shareViaWebShare() {
+            alert("get");
             navigator.share({
               title: 'Title to be shared',
               text: 'Text to be shared',
