--- a/404.html
+++ b/404.html
@@ -1,5 +1,20 @@
-<html>
-  <body>
-    <h1>404<h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>404:Page Not Found</title>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/vendor.css">
+
+  </head>
+  <body style="background:black; text-align:center; color:white; justify-content: center; align-content: center;">
+    <div class="col-twelve" style="margin-top:10%">
+
+      <h1 style="font-size:150px;">4☹4</h1>
+      <h1 style="font-size:50px;">Page Not Found</h1>
+      <a class="button stroke smoothscroll" href="index.html" title="">Home</a>
+
+    </div>
   </body>
 </html>
