--- a/404.html
+++ b/404.html
@@ -8,13 +8,24 @@
     <link rel="stylesheet" href="css/vendor.css">
 
   </head>
-  <body style="background:black; text-align:center; color:white; justify-content: center; align-content: center;">
-    <div class="col-twelve" style="margin-top:10%">
+  <body style="background:#151515; padding:8%">
+    <!-- <div class="col-twelve" style="margin-top:10%">
 
       <h1 style="font-size:150px;">4☹4</h1>
       <h1 style="font-size:50px;">Page Not Found</h1>
       <a class="button stroke smoothscroll" href="index.html" title="">Home</a>
 
-    </div>
+    </div> -->
+    <section id="contact">
+
+  		<div class="row section-intro">
+     		<div class="col-twelve">
+
+     			<h5 style="font-size:150px;">4☹4</h5>
+     			<h1>Page Not Found</h1>
+     		</div>
+     	</div> <!-- /section-intro -->
+
+  	</section>
   </body>
 </html>
