--- a/404.html
+++ b/404.html
@@ -19,8 +19,11 @@
 
   		<div class="row section-intro">
      		<div class="col-twelve">
-
-     			<h5 style="font-size:150px;">4☹4</h5>
+          <marquee behavior="alternate">
+     			<h5 style="font-size:150px; display:inline;">④</h5>
+          <h5 style="font-size:150px; display:inline;">⓪</h5>
+          <h5 style="font-size:150px; display:inline;">④</h5>
+        </marquee>
      			<h1>Page Not Found</h1>
      		</div>
      	</div> <!-- /section-intro -->
