--- a/404.html
+++ b/404.html
@@ -3,20 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>404:Page Not Found</title>
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
+  	<meta name="description" content="Resume Site">
+  	<meta name="author" content="M.Mundrawala">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/vendor.css">
 
+    <script src="js/modernizr.js"></script>
+    <script src="js/pace.min.js"></script>
+    <script>
+    window.addEventListener('contextmenu', function (e) {
+    e.preventDefault();
+    }, false);
+    </script>
+
   </head>
   <body style="background:#151515; padding:8%">
-    <!-- <div class="col-twelve" style="margin-top:10%">
-
-      <h1 style="font-size:150px; color:gray;">4☹4</h1>
-      <h1 style="font-size:50px; color:gray;">Page Not Found</h1>
-
-    </div> -->
     <section id="contact">
-
   		<div class="row section-intro">
      		<div class="col-twelve">
           <marquee behavior="alternate">
@@ -26,8 +35,11 @@
         </marquee>
      			<h1>Page Not Found</h1>
      		</div>
-     	</div> <!-- /section-intro -->
-
+     	</div>
   	</section>
+    <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
   </body>
 </html>
