--- a/404.html
+++ b/404.html
@@ -26,9 +26,9 @@
   </head>
   <body style="background:#151515; padding:8%">
     <section id="contact">
-  		<div class="row section-intro">
-     		<div class="col-twelve">
-          <marquee behavior="alternate">
+  		<div class="row section-intro" style="width:100%;">
+     		<div class="col-twelve" style="width:100%;">
+          <marquee behavior="alternate" width="100%">
      			<h5 style="font-size:100px; display:inline;">④</h5>
           <h5 style="font-size:100px; display:inline;">⓪</h5>
           <h5 style="font-size:100px; display:inline;">④</h5>
