--- a/404.html
+++ b/404.html
@@ -25,18 +25,12 @@
 
   </head>
   <body style="background:#151515; padding:8%">
-    <section id="contact">
-  		<div class="row section-intro" style="width:100%;">
-     		<div class="col-twelve" style="width:100%;">
-          <marquee behavior="alternate" width="100%">
-     			<h5 style="font-size:100px; display:inline;">④</h5>
-          <h5 style="font-size:100px; display:inline;">⓪</h5>
-          <h5 style="font-size:100px; display:inline;">④</h5>
-        </marquee>
-     			<h1>Page Not Found</h1>
-     		</div>
-     	</div>
-  	</section>
+    <marquee behavior="alternate" width="100%" style="margin-top:15%;">
+    <h5 style="font-size:100px; color: #db4317; display:inline;">④</h5>
+    <h5 style="font-size:100px; color: #db4317; display:inline;">⓪</h5>
+    <h5 style="font-size:100px; color: #db4317; display:inline;">④</h5>
+  </marquee>
+  <h1 style="text-align:center; color:white">Page Not Found</h1>
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
