--- a/404.html
+++ b/404.html
@@ -31,6 +31,10 @@
     <h5 style="font-size:100px; color: #db4317; display:inline;">④</h5>
   </marquee>
   <h1 style="text-align:center; color:white">Page Not Found</h1>
+
+  <div id="preloader">
+     <div id="loader"></div>
+  </div>
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
