--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Howdy, I'm Murtaza. I'm student of computer science. I live in BHUJ. I have love to do programming. I'm fan of technology.  I'm always energetic and eager to learn new skills & technology. I use a creative approach to problem solve. I'm flexible in my working hours, being able to work evenings and weekends.</p>
+   				<p class="lead" style="text-align: justify; text-justify: inter-word;">Howdy, I'm Murtaza. I'm student of computer science. I live in BHUJ. I have love to do programming. I'm fan of technology.  I'm always energetic and eager to learn new skills & technology. I use a creative approach to problem solve. I'm flexible in my working hours, being able to work evenings and weekends.</p>
    			</div>
 
    		</div>
@@ -127,7 +127,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Seeking a beginner role to enhance and explore my technical knowledge gained at University Of Kachchh in the last few years. I hold a B.Sc(CA&IT) degree from University Of Kachchh. Currently, i'm intern at Romin Interactive. </p>
+   			<p style="text-align: justify; text-justify: inter-word;">Seeking a beginner role to enhance and explore my technical knowledge gained at University Of Kachchh in the last few years. I hold a B.Sc(CA&IT) degree from University Of Kachchh. Currently, i'm intern at Romin Interactive. </p>
 
    			<ul class="info-list">
    				<li>
@@ -142,14 +142,14 @@
           <hr>
    				<li>
    					<strong>Email:</strong><br>
-            <a href="mailto:mundrawala18@gmail.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a> &nbsp&nbspmudrawala18@gmail.com<br>
+            <!-- <a href="mailto:mundrawala18@gmail.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a> &nbsp&nbspmudrawala18@gmail.com<br> -->
             <a href="mailto:hello@mundrawala.ml"> <i class="fa fa-envelope" aria-hidden="true"></i></a>&nbsp&nbsp hello@mundrawala.ml
    				</li>
           <hr>
           <li>
    					<strong>Mobile:</strong><br>
-   					<a href="tel:+917490972908"><i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp +917490972908<br>
-            <a href="tel:+919737728472"><i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp +919737728472
+   					<a href="tel:+917490972908"><i class="fa fa-phone" aria-hidden="true"></i></a>  &nbsp +917490972908<br>
+            <!-- <a href="tel:+919737728472"><i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp +919737728472 -->
 
    				</li>
           <hr>
@@ -478,7 +478,8 @@
 
    			<h5>Email Me At</h5>
 
-   			<p><a style="color: #6e6e6e;" href="mailto:mundrawala18@gmail.com">mudrawala18@gmail.com</a><br>
+   			<p>
+          <!-- <a style="color: #6e6e6e;" href="mailto:mundrawala18@gmail.com">mudrawala18@gmail.com</a><br> -->
           <a style="color: #6e6e6e;" href="mailto:hello@mundrawala.ml">hello@mundrawala.ml</a></p>
 
    		</div>
@@ -491,7 +492,8 @@
 
    			<h5>Call Me At</h5>
 
-   			<p><a style="color: #6e6e6e;" href="tel:+919737728472">97377 28472</a><br>
+   			<p>
+          <!-- <a style="color: #6e6e6e;" href="tel:+919737728472">97377 28472</a><br> -->
 			   	 <a style="color: #6e6e6e;" href="tel:+917490972908">74909 72908</a><br>
 			   </p>
 
