--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
     <script>
+    window.location.replace("https://www.mundrawala.ml/");
     window.addEventListener('contextmenu', function (e) {
     e.preventDefault();
     }, false);
