--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <link rel="stylesheet" href="css/base.css">
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/vendor.css">
+   <link rel="manifest" href="manifest.json">
 
    <!-- script
    ================================================== -->
@@ -33,6 +34,14 @@
    e.preventDefault();
    }, false);
    </script>
+   <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker.register('/service-worker.js');
+    } else {
+      console.log("Service worker is not supported");
+    }
+  </script>
+
    <!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.png">
