--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            Bohra Colony,<br>
+            Bohra(Vohra) Colony,<br>
             Bhuj-Mundra Road,<br>
             BHUJ(GUJ)-370001
             </p>
