--- a/index.html
+++ b/index.html
@@ -30,14 +30,10 @@
    <script src="js/modernizr.js"></script>
    <script src="js/pace.min.js"></script>
    <script>
-     navigator.serviceWorker.register('service-worker.js');
    window.addEventListener('contextmenu', function (e) {
    e.preventDefault();
    }, false);
    </script>
-   <script>
-
-  </script>
 
    <!-- favicons
 	================================================== -->
@@ -143,7 +139,7 @@
           <hr>
    				<li>
    					<strong>Birth Date:</strong><br>
-   					March 11, 1998
+   					11<sup>th</sup> March, 1998
    				</li>
           <hr>
    				<li>
@@ -154,7 +150,7 @@
           <hr>
           <li>
    					<strong>Mobile:</strong><br>
-   					<a href="tel:+917490972908"><i class="fa fa-phone" aria-hidden="true"></i></a>  &nbsp +917490972908<br>
+   					<a href="tel:+917490972908"><i class="fa fa-phone" aria-hidden="true"></i></a>  &nbsp +91 74909 72908<br>
             <!-- <a href="tel:+919737728472"><i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp +919737728472 -->
 
    				</li>
@@ -500,7 +496,7 @@
 
    			<p>
           <!-- <a style="color: #6e6e6e;" href="tel:+919737728472">97377 28472</a><br> -->
-			   	 <a style="color: #6e6e6e;" href="tel:+917490972908">74909 72908</a><br>
+			   	 <a style="color: #6e6e6e;" href="tel:+917490972908">+91 74909 72908</a><br>
 			   </p>
 
    		</div>
