--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
    				<li>
    					<strong>Email:</strong><br>
             <!-- <a href="mailto:mundrawala18@gmail.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a> &nbsp&nbspmudrawala18@gmail.com<br> -->
-            <a href="mailto:hello@mundrawala.ml"> <i class="fa fa-envelope" aria-hidden="true"></i></a>&nbsp&nbsp hello@mundrawala.ml
+            <a href="mailto:hey@mundrawala.ml"> <i class="fa fa-envelope" aria-hidden="true"></i></a>&nbsp&nbsp hey@mundrawala.ml
    				</li>
           <hr>
           <li>
@@ -482,7 +482,7 @@
 
    			<p>
           <!-- <a style="color: #6e6e6e;" href="mailto:mundrawala18@gmail.com">mudrawala18@gmail.com</a><br> -->
-          <a style="color: #6e6e6e;" href="mailto:hello@mundrawala.ml">hello@mundrawala.ml</a></p>
+          <a style="color: #6e6e6e;" href="mailto:hey@mundrawala.ml">hey@mundrawala.ml</a></p>
 
    		</div>
 
