--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/profile-pic-min.jpg" alt="Profile Picture">
 
    				<p class="lead" style="text-align: justify; text-justify: inter-word;">Howdy, I'm Murtaza. I'm student of computer science. I live in BHUJ. I have love to do programming. I'm fan of technology.  I'm always energetic and eager to learn new skills & technology. I use a creative approach to problem solve. I'm flexible in my working hours, being able to work evenings and weekends.</p>
    			</div>
