--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
 	   			<h1>I'm, Murtaza Mundrawala</h1>
 
 	   			<p class="intro-position">
-	   				<span>Mobile App Developer</span>
 	   				<span>Web Developer</span>
 	   			</p>
 
@@ -213,9 +212,11 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+        <a href="images/MURTAZA-MUNDRAWALA.png" title="Business Card" class="button button-primary">Business Card</a>
    			<a href="MURTAZA-MUNDRAWALA.pdf" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
+      	<br/><br/>
+      <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
    	</div>
 
    </section> <!-- /process-->
