--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-        <a href="images/MURTAZA-MUNDRAWALA.png" title="Business Card" class="button button-primary">Business Card</a>
+        <a download='file' href="images/MURTAZA-MUNDRAWALA.png" title="Business Card" class="button button-primary">Business Card</a>
    			<a href="MURTAZA-MUNDRAWALA.pdf" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
       	<br/><br/>
