--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 		        	<span>Copyright © {{yr}}. Murtaza Mundrawala. All rights reserved</span>
 		         </div>
 	      	</div>
-
+          <div id="vc"><script type="text/javascript" src="http://services.webestools.com/cpt_visitors/70125-1-4.js"></script></div>
 
 	      	<div id="go-top">
 		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
@@ -525,6 +525,7 @@
 
       	</div> <!-- /row -->
         <script>
+        document.getElementById('vc').style.pointerEvents = 'none';
         new Vue({
             el: '#footer',
             data: {
