--- a/one/index.html
+++ b/one/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Header -->
-								<header id="header">
+								<!-- <header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -30,20 +30,19 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
-								</header>
+								</header> -->
 
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
-											<p>A free and fully responsive site template</p>
+											<h1>LegalPhilia</h1>
+											<p><i>tag line of LegalPhilia</i></p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
+										<p>Sort discriptio of LP <br>Sort discriptio of LP <br>Sort discriptio of LP <br>Sort discriptio of LP <br></p>
+										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
+										</ul> -->
 									</div>
 									<span class="image object">
 										<img src="images/pic10.jpg" alt="" />
@@ -151,12 +150,7 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
+
 
 							<!-- Menu -->
 								<nav id="menu">
@@ -165,56 +159,82 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Court Tools</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Court Jurisdiction Finder</a></li>
+												<li><a href="#">DRT Court Fee Calculator</a></li>
+												<li><a href="#">Court Fee Calculator</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Format Download</a></li>
+										<li><a href="#">Affilate Marketing</a></li>
 									</ul>
 								</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>Delhi Court Legal Updates</h2>
 									</header>
-									<div class="mini-posts">
+									<div class="mini-posts" style="height:250px;">
+										<h3 style="color:#f56a6a;">Notifications</h3>
+										<marquee direction = "up" scrollamount=2.5 onMouseOver="this.stop()" onMouseOut="this.start()">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<h4>notification 1</h4>
+											<p>dispriction</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<h4>notification 2</h4>
+											<p>dispriction</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<h4>notification 3</h4>
+											<p>dispriction</p>
 										</article>
+										<article>
+										<h4>notification 4</h4>
+										<p>dispriction</p>
+									</article>
+									<article>
+										<h4>notification 5</h4>
+										<p>dispriction</p>
+									</article>
+									<article>
+										<h4>notification 6</h4>
+										<p>dispriction</p>
+									</article>
+								</marquee>
 									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
+									<div class="mini-posts">
+										<h3 style="color:#f56a6a;">Bail Roasters</h3>
+										<marquee direction = "up" scrollamount=2.5 onMouseOver="this.stop()" onMouseOut="this.start()">
+										<article>
+											<h4>Bail Roasters 1</h4>
+											<p>dispriction</p>
+										</article>
+										<article>
+											<h4>Bail Roasters 2</h4>
+											<p>dispriction</p>
+										</article>
+										<article>
+											<h4>Bail Roasters 3</h4>
+											<p>dispriction</p>
+										</article>
+										<article>
+											<h4>Bail Roasters 4</h4>
+											<p>dispriction</p>
+										</article>
+										<article>
+											<h4>Bail Roasters 5</h4>
+											<p>dispriction</p>
+										</article>
+										<article>
+											<h4>Bail Roasters 6</h4>
+											<p>dispriction</p>
+										</article>
+									</marquee>
+									</div>
 								</section>
 
 							<!-- Section -->
