--- a/one/format.html
+++ b/one/format.html
@@ -20,43 +20,64 @@
 					<div id="main">
 						<div class="inner">
 
-							<!-- Header -->
-								<!-- <header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
-								</header> -->
 
 							<!-- Banner -->
 								<section id="banner">
-									<div class="content">
+									<div class="content" style="justify-content:space-between;">
 										<header>
-											<h1>LegalPhilia</h1>
-											<p><i>tag line of LegalPhilia</i></p>
+											<h1  style="display:inline;">LegalPhilia</h1><p style="display:inline; margin-left:30px;"><i>tag line of LegalPhilia</i></p>
 										</header>
-										<p>Sort discriptio of LP <br>Sort discriptio of LP <br>Sort discriptio of LP <br>Sort discriptio of LP <br></p>
-										<!-- <ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul> -->
-									</div>
-									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
 								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>About LP</h2>
+										<h2>Format</h2>
 									</header>
-									<div class="features">
-										<p>Content<br>...<br>...<br>...<br>...<br>...<br>...<br>...<br>...<br>Content</p>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th style="width:10%;">Sr. No.</th>
+													<th style="width:80%;">Title</th>
+													<th style="width:10%;">Download</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>Petitions</td>
+													<td><a href="#" class="icon solid fa-download"></a></td>
+												</tr>
+												<tr>
+													<td>2</td>
+													<td>Complaints</td>
+													<td><a href="#" class="icon solid fa-download"></a></td>
+												</tr>
+												<tr>
+													<td>3</td>
+													<td>Plaint</td>
+													<td><a href="#" class="icon solid fa-download"></a></td>
+												</tr>
+												<tr>
+													<td>4</td>
+													<td>WS</td>
+													<td><a href="#" class="icon solid fa-download"></a></td>
+												</tr>
+												<tr>
+													<td>5</td>
+													<td>Affidavit</td>
+													<td><a href="#" class="icon solid fa-download"></a></td>
+												</tr>
+												<tr>
+													<td>6</td>
+													<td>Forms</td>
+													<td><a href="#" class="icon solid fa-download"></a></td>
+												</tr>
+											</tbody>
+										</table>
 									</div>
+
 								</section>
 
 							<!-- Section
