--- a/index.html
+++ b/index.html
@@ -440,21 +440,6 @@
    		</div>
    	</div> <!-- /section-intro -->
 
-   	<!-- <div class="row contact-form">
-
-   		<div class="col-twelve">
-            <form onsubmit="return false" id="contact">
-              <input type="text" placeholder="Name" value="" class="inputFld" required>
-              <input type="text" placeholder="Email" value="" class="inputFld" required>
-              <input type="text" placeholder="subject" value="" class="inputFld" required>
-              <textarea placeholder="Message" value="" class="inputFld" style="resize:none;" required></textarea>
-              <button class="sendBTN" v-on:click="send"> SEND </button>
-      		</form>
-
-         </div>
-
-   	</div> -->
-
    	<div class="row contact-info">
 
    		<div class="col-four tab-full">
@@ -465,11 +450,7 @@
 
    			<h5>Where to find me</h5>
 
-   			<p>
-            Bohra(Vohra) Colony,<br>
-            Bhuj-Mundra Road,<br>
-            BHUJ(GUJ)-370001
-            </p>
+   			<p>BHUJ(GUJ)-370001</p>
 
    		</div>
 
@@ -501,7 +482,6 @@
 			   </p>
 
    		</div>
-
    	</div> <!-- /contact-info -->
 
 	</section> <!-- /contact -->
