--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<!-- <p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p> -->
         <div style="margin: 5%;">
 				<ul class="skill-bars">
 				   <li>
@@ -275,7 +274,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>At Romin Interactive</h4>
-	   					<p>15/03/2021 to Present</p>
+	   					<p>March 2021 to July 2021</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
