--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
             <div class="timeline-content">
               <h4>Department Of Computer Science, Kachchh University</h4>
-              <p>June 2019 - Pursuing</p>
+              <p>June 2019 - July 2021</p>
               <p>&nbsp</p>
             </div>
             </div> <!-- /timeline-block -->
